Give already scaled images to mpris.

BUG:263642